--- a/src/components/VerificationMethods/index.css
+++ b/src/components/VerificationMethods/index.css
@@ -1,9 +1,9 @@
 .verification-methods {
     position: absolute;
-    top: 570px;
+    top: 550px;
     left: 42px;
     width: 60px;
-    padding: 23px 0;
+    padding: 18px 0;
     border-radius: 30px;
     background: rgba(1, 21, 55, 0.6);
 }
@@ -11,6 +11,7 @@
     width: 100%;
     height: 32px;
     border-radius: 16px;
+    margin: 5px 0;
     text-align: center;
     line-height: 32px;
     vertical-align: bottom;
@@ -18,6 +19,7 @@
     font-weight: 500;
     color: #ffffff;
     cursor: pointer;
+    text-shadow: 0px 0px 4px rgba(0, 0, 0, 0.3);
 }
 .methods-item-active {
     background: #d39422;
