--- a/src/components/Header/index.module.css
+++ b/src/components/Header/index.module.css
@@ -31,5 +31,5 @@ h1 {
     font-family: YouSheBiaoTiHei;
     font-size: 24px;
     color: #ffffff;
-    text-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.6);
+    text-shadow: 0px 0px 4px rgba(0, 0, 0, 0.6);
 }
