--- a/src/components/AirportVerificationSettingDrawer/index.module.css
+++ b/src/components/AirportVerificationSettingDrawer/index.module.css
@@ -1,13 +1,13 @@
-.verification-elements {
+.verificationElements {
     margin-top: 10px;
 }
-.elements-header {
+.elementsHeader {
     display: flex;
     justify-content: flex-start;
     align-items: center;
     padding-left: 21px;
 }
-.elements-header-title {
+.elementsHeaderTitle {
     font-family: YouSheBiaoTiHei;
     font-size: 18px;
     font-weight: bold;
@@ -15,7 +15,7 @@
     color: rgba(0, 0, 0, 0.6);
     margin-right: 8px;
 }
-.split-line {
+.splitLine {
     flex: 1;
     position: relative;
     top: 3px;
@@ -23,7 +23,7 @@
     height: 1px;
     background: #d8d8d8;
 }
-.elements-btn {
+.elementsBtn {
     display: flex;
     justify-content: flex-start;
     flex-wrap: wrap;
@@ -31,7 +31,7 @@
     padding: 10px 5px 10px 17px;
     user-select: none;
 }
-.elements-item {
+.elementsItem {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -50,35 +50,13 @@
     /* background: #0096ff; */
     background: rgba(0, 0, 0, 0.08);
 }
-.elements-item-active {
+.elementsItemActive {
     color: #ffffff;
     background: #0096ff;
 }
 .pl5 {
     padding-left: 25px;
 }
-.custom-checkbox-group {
-    padding: 5px 0;
-}
-.custom-checkbox-group .ant-checkbox-inner {
-    width: 22px;
-    height: 22px;
-}
-.custom-checkbox-group .ant-checkbox-inner::after {
-    width: 7px;
-    height: 13px;
-}
-.custom-checkbox-group span {
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 22px;
-    vertical-align: bottom;
-    color: #3d3d3d;
-}
-.timeinterval-item {
+.timeintervalItem {
     min-width: 80px;
-}
-/* drawer-content */
-.drawer-container .ant-drawer-content-wrapper {
-    top: 58px;
 }
