--- a/src/components/AirportVerificationSituation/index.module.css
+++ b/src/components/AirportVerificationSituation/index.module.css
@@ -1,17 +1,17 @@
-.airport-verification {
+.airportVerification {
     position: absolute;
     top: 124px;
     left: 50px;
     display: flex;
     justify-content: flex-start;
 }
-.airport-operater {
+.airportOperater {
     width: 40px;
     padding: 8px 0;
     border-radius: 20px;
     background: rgba(1, 21, 55, 0.6);
 }
-.airport-btn {
+.airportBtn {
     position: relative;
     width: 40px;
     height: 32px;
@@ -22,11 +22,7 @@
     justify-content: center;
     align-items: center;
 }
-/* .airport-btn img {
-    height: 32px;
-    object-fit: cover;
-} */
-.airport-btn .num {
+.airportBtn .num {
     position: absolute;
     top: 46%;
     left: 50%;
@@ -34,16 +30,16 @@
     font-size: 12px;
     font-weight: 500;
 }
-.airport-btn-active {
+.active {
     background: #d39422;
 }
 
-.airport-btn-desc {
+.desc {
     width: 40px;
     padding: 8px 0;
     margin-left: 10px;
 }
-.airport-desc-item {
+.descItem {
     width: 100px;
     height: 32px;
     margin: 10px 0;
@@ -53,11 +49,10 @@
     line-height: 39px;
     text-shadow: 0px 0px 4px rgba(0, 0, 0, 0.3);
 }
-.airport-desc-item span {
+.descItem span {
     color: #ffffff;
     font-family: AlibabaPuHuiTi;
     font-size: 20px;
     font-weight: bolder;
-    /* -webkit-text-shadow: 0px 0px 10px 10px rgba(0, 0, 0, 1); */
     -webkit-text-stroke: 1px rgba(0, 0, 0, 1);
 }
