--- a/src/components/ColorCard/index.module.css
+++ b/src/components/ColorCard/index.module.css
@@ -1,9 +1,9 @@
-.color-card {
+.card {
     position: absolute;
     top: 334px;
     right: 17px;
 }
-.color-title {
+.title {
     display: flex;
     width: 64px;
     height: 22px;
@@ -15,17 +15,17 @@
     -webkit-text-stroke: 1px rgba(0, 0, 0, 1);
     text-shadow: 0px 0px 4px rgba(0, 0, 0, 0.3);
 }
-.color-text {
+.text {
     width: 50%;
 }
-.color-unit {
+.unit {
     width: 50%;
 }
-.color-container {
+.container {
     display: flex;
     justify-content: space-between;
 }
-.color-box {
+.colorBox {
     width: 32px;
     /* height: 220px; */
     border: 1px solid #ffffff;
@@ -34,14 +34,14 @@
     overflow: hidden;
     /* background: #c727ac; */
 }
-.color-item {
+.colorItem {
     width: 100%;
-    height: 22px;
+    height: 23px;
     /* border-bottom: 1px solid #ffffff; */
 }
-.color-text-box {
-}
-.color-text-item {
+/* .color-text-box {
+} */
+.textItem {
     min-width: 25px;
     margin-left: 8px;
     font-size: 16px;
