--- a/src/components/ModelSelect/index.module.css
+++ b/src/components/ModelSelect/index.module.css
@@ -1,4 +1,4 @@
-.model-select {
+.select {
     position: absolute;
     left: 37px;
     bottom: 31px;
@@ -10,7 +10,7 @@
     box-sizing: border-box;
     background: rgba(1, 21, 55, 0.6);
 }
-.model-label {
+.label {
     cursor: pointer;
     font-size: 16px;
     font-weight: bold;
@@ -25,13 +25,8 @@
     height: 15px;
     transform: translateY(-50%);
     cursor: pointer;
-    /* transition: all 0.3s; */
 }
-/* .arrow:active {
-    transform: rotateZ(180deg);
-    transform-origin: center;
-} */
-.select-options {
+.options {
     position: absolute;
     left: 0;
     bottom: 42px;
@@ -40,7 +35,7 @@
     border-radius: 8px;
     background: rgba(1, 21, 55, 0.6);
 }
-.option-item {
+.optionsItem {
     width: 100%;
     height: 30px;
     box-sizing: border-box;
@@ -50,8 +45,8 @@
     color: #ffffff;
     cursor: pointer;
     padding-left: 18px;
-    text-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.5);
+    text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5);
 }
-.option-item:hover {
+.optionsItem:hover {
     background: #4daef2;
 }
