--- a/src/components/VerificationMethods/index.module.css
+++ b/src/components/VerificationMethods/index.module.css
@@ -1,4 +1,4 @@
-.verification-methods {
+.methods {
     position: absolute;
     top: 550px;
     left: 42px;
@@ -7,7 +7,7 @@
     border-radius: 30px;
     background: rgba(1, 21, 55, 0.6);
 }
-.methods-item {
+.methodsItem {
     width: 100%;
     height: 32px;
     border-radius: 16px;
@@ -21,6 +21,6 @@
     cursor: pointer;
     text-shadow: 0px 0px 4px rgba(0, 0, 0, 0.3);
 }
-.methods-item-active {
+.active {
     background: #d39422;
 }
