feat: 新增切换机场,图表

--- a/src/components/SearchInput/index.module.css
+++ b/src/components/SearchInput/index.module.css
@@ -41,6 +41,9 @@
 }
 
 .optionContainer {
+    position: absolute;
+    top: 30px;
+    width: 100%;
     margin: 9px 0;
     padding: 10px 0;
     max-height: 150px;
