--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -102,7 +102,7 @@ body {
 
 html {
     font-family: sans-serif;
-    line-height: 1.25;
+    /* line-height: 1.25; */
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
     -ms-overflow-style: scrollbar;
