--- a/src/components/AirportVerificationModal/index.module.css
+++ b/src/components/AirportVerificationModal/index.module.css
@@ -8,6 +8,11 @@
     font-weight: bold;
     color: #ffffff;
 }
+.switchAirport {
+    position: absolute;
+    top: 10px;
+    right: 78px;
+}
 .close {
     top: 10px;
     right: 20px;
@@ -73,6 +78,7 @@
     padding: 31px 20px;
 }
 .echartTop {
+    display: flex;
     width: 100%;
     height: 60px;
     padding: 12px 20px;
@@ -81,4 +87,29 @@
 .echarts {
     width: 100%;
     height: 521px;
+}
+.button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 36px;
+}
+.buttonGap {
+    margin-right: 7px;
+}
+.switch {
+    margin-left: auto;
+}
+.downloadPic {
+    /* width: 16px;
+    height: 20px; */
+    /* line-height: 25px; */
+    /* vertical-align: top; */
+}
+.buttonText {
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 25px;
+    margin-left: 5px;
+    color: #ffffff;
 }
