--- a/src/components/AreaVerificationModal/index.module.css
+++ b/src/components/AreaVerificationModal/index.module.css
@@ -59,7 +59,9 @@
     font-weight: 500;
 }
 .timeBox {
-    padding: 0 20px;
+    display: flex;
+    align-items: center;
+    padding: 0 9px;
     height: 32px;
     border-radius: 16px;
     border: 1px solid rgba(0, 0, 0, 0.16);
