--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,17 @@ li {
 /* .custom-checkbox-group {
     padding: 5px 0;
 } */
+.form-group-box {
+    display: flex;
+    align-items: center;
+    padding: 0 9px;
+    height: 32px;
+    border-radius: 16px;
+    border: 1px solid rgba(0, 0, 0, 0.16);
+}
+.form-group-box:hover {
+    border-color: #7accff;
+}
 .custom-checkbox-group .ant-checkbox-inner {
     width: 22px;
     height: 22px;
@@ -67,6 +78,7 @@ li {
 
 .ant-modal .ant-modal-header {
     margin: 0;
+    overflow: hidden;
 }
 .ant-modal .ant-modal-content {
     padding: 0;
