feat: 区域检验默认参数

--- a/src/components/OperateButton/index.module.css
+++ b/src/components/OperateButton/index.module.css
@@ -19,7 +19,13 @@
     margin-right: 7px;
 }
 .switch {
+    position: relative;
     margin-left: auto;
+}
+.lineInner {
+    position: absolute;
+    top: 15px;
+    left: 19px;
 }
 .buttonText {
     font-size: 18px;
