--- a/src/components/AreaVerificationModal/index.module.css
+++ b/src/components/AreaVerificationModal/index.module.css
@@ -97,6 +97,7 @@
     border-radius: 16px;
     margin-right: 8px;
     border: 1px solid rgba(0, 0, 0, 0.16);
+    overflow: hidden;
 }
 .gapItem {
     width: 48px;
@@ -131,12 +132,12 @@
     width: 100%;
     height: 521px;
 } */
-.button {
+/* .button {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 36px;
-}
+} */
 .buttonGap {
     margin-right: 7px;
 }
