--- a/src/components/EchartComponent/index.module.css
+++ b/src/components/EchartComponent/index.module.css
@@ -25,3 +25,93 @@
     color: #ffffff;
     background: #4daef2;
 }
+.tableTitle {
+    width: 100%;
+    padding: 22px;
+    font-size: 18px;
+    font-weight: bold;
+    text-align: center;
+    color: "rgba(0, 0, 0, 0.8)";
+}
+.tableContainer {
+    display: flex;
+    max-width: 100%;
+    padding: 10px 30px 30px;
+    color: rgba(0, 0, 0, 0.88);
+    font-size: 14px;
+    list-style: none;
+}
+.tableBox {
+    overflow-x: auto;
+    /* flex: 1; */
+    width: 750px;
+    /* width: calc(100% - 200px); */
+}
+.tableLeft {
+    width: 200px;
+    height: 38px;
+    color: rgba(0, 0, 0, 0.88);
+    font-weight: 600;
+}
+.blankBox {
+    width: 100%;
+    height: 38px;
+    border: 1px solid #4daef2;
+    border-right: none;
+}
+.normalModel {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 7px 10px;
+    border: 1px solid #4daef2;
+    border-top: none;
+    border-right: none;
+    /* height: 100px; */
+}
+.rainModel {
+    display: flex;
+    /* height: 100px; */
+}
+.model {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    border: 1px solid #4daef2;
+    border-top: none;
+}
+.rainText {
+    width: 50%;
+    text-align: center;
+}
+.cell {
+    padding: 7px 10px;
+    border-bottom: 1px solid #4daef2;
+    /* border-right: 1px solid #4daef2; */
+}
+table {
+    width: 100%;
+    text-align: center;
+    /* border-radius: 8px 8px 0 0; */
+    border-collapse: separate;
+    border-spacing: 0;
+    border-top: 1px solid #4daef2;
+    border-left: 1px solid #4daef2;
+    overflow-x: auto;
+}
+th {
+    border-inline-end: 1px solid #4daef2;
+    position: relative;
+    color: rgba(0, 0, 0, 0.88);
+    font-weight: 600;
+    text-align: center;
+    background: transparent;
+    border-bottom: 1px solid #4daef2;
+    padding: 7px 0;
+    width: 200px;
+    height: 37px;
+    /* overflow: hidden; */
+    overflow-wrap: break-word;
+    /* transition: background 0.2s ease; */
+}
