--- a/src/components/TimeIntervalRadio/index.module.css
+++ b/src/components/TimeIntervalRadio/index.module.css
@@ -7,10 +7,10 @@
     align-items: center;
     width: 19px;
     height: 32px;
+    padding: 0;
+    margin-right: 8px;
     border-radius: 4px;
     background: #4daef2;
-    margin-right: 8px;
-    cursor: pointer;
 }
 .gapContainer {
     display: flex;
@@ -27,10 +27,12 @@
     width: 48px;
     height: 25px;
     border-radius: 20px;
-    /* background: #4daef2; */
+    padding: 0;
+    border: none;
     font-size: 16px;
     font-weight: bold;
     color: rgba(0, 0, 0, 0.6);
+    background: #ffffff;
     line-height: 25px;
     text-align: center;
     cursor: pointer;
